--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,14 @@ hr.line {
   min-width: 100%;
 }
 
+.search-input input {
+  height: 30px;
+  border-radius: 10px;
+  min-width: 70%;
+  border: none;
+  padding-left: 20px;
+}
+
 button {
   background-color: rgb(58, 195, 244);
   border-radius: 20px;
@@ -69,7 +77,7 @@ button {
   color: white;
   font-size: 16px;
   margin-top: 20px;
-  width: 100px;
+  min-width: 70%;
   height: 30px;
 }
 
@@ -108,11 +116,20 @@ button:hover {
   margin-bottom: 20px;
   /* border: solid 2px palevioletred; */
   border-radius: 30px;
+  padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.city-icon {
+  display: inline;
+  vertical-align: middle;
 }
 
 .display-city h2 {
   margin-left: 20px;
+  display: inline;
+  vertical-align: middle;
+  color: #DA22FF;
 }
 
 .days-forecast {
@@ -134,10 +151,12 @@ button:hover {
 
 .days-forecast h2 {
   margin-left: 20px;
+  margin-bottom: 0px;
+  color: rgb(0, 42, 255);
 }
 
 .days-container {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -147,11 +166,15 @@ button:hover {
 }
 
 .day {
-  width: 250px;
-  height: 250px;
+  padding-top: 10px;
+  width: 200px;
+  height: 200px;
   text-align: center;
-  border: solid 2px black;
+
   border-radius: 20px; 
+  background: #56CCF2;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .day ul {
@@ -160,4 +183,39 @@ button:hover {
   text-align: left;
   margin-left: 10px;
   line-height: 2;
+}
+
+.city-uv {
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.uv-container-low {
+  display: inline;
+  width: 30px;
+  font-size: 16px;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  background-color: green;
+}
+
+.uv-container-moderate {
+  display: inline;
+  width: 30px;
+  font-size: 16px;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  background-color: rgb(195, 195, 2);
+}
+
+.uv-container-high {
+  display: inline;
+  width: 30px;
+  font-size: 16px;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  background-color: red;
 }
