--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ h2 {
   color: #414345;
 }
 
+h3 {
+  margin: 0;
+}
+
 .nav-container {
   background: #DA22FF;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #9733EE, #DA22FF);  /* Chrome 10-25, Safari 5.1-6 */
