--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,11 +40,6 @@ hr.line {
 }
 .main-container {
   display: flex;
-  /* flex-direction: row;
-  min-height: 100%;
-  justify-content: center;
-  text-align: center;
-  gap: 150px; */
   justify-content: space-around;
 }
 
@@ -56,7 +51,6 @@ hr.line {
   text-align: center;
   justify-content: flex-start;
   align-items: stretch;
-  /* border: solid 2px palevioletred; */
   border-radius: 30px;
   margin: 20px 0px 0px 30px;
   background-color: rgb(214, 214, 214);
@@ -92,14 +86,19 @@ button:hover {
 }
 
 .cities-button{
-  list-style: none; 
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
 }
 
 .cities-button li {
   background-color: #e600ff;
   width: 200px;
   line-height: 2;
-  margin: 0px 0px 20px 0px;
+  margin: 10px 0px 0px 0px;
   border-radius: 10px;
   color: white;
   font-weight: 300;
@@ -107,7 +106,7 @@ button:hover {
 
 .cities-button li:hover {
   background-color: #f06dff;
-  cursor: pointer;
+  cursor: pointer;  
 }
 
 .city-container {
@@ -226,4 +225,77 @@ button:hover {
   border-radius: 5px;
   color: white;
   background-color: green;
+}
+
+@media only screen and (max-width: 820px) {
+  .main-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .search-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 350px;
+    text-align: center;
+    justify-content: flex-start;
+    align-items: stretch;
+    border-radius: 30px;
+    margin: 20px 0px 0px 0px;
+    background-color: rgb(214, 214, 214);
+  }
+
+  .day {
+  width: 100px;
+  height: 130px;
+  font-size: 8px;
+  }
+}
+
+
+
+@media only screen and (max-width: 390px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+  .city-container {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    margin: 20px 0px 0px 0px;
+  }
+
+  .display-city {
+    min-width: 100%;
+  }
+
+  .days-forecast{
+    display: flex;
+    flex-direction: column;
+    height: 1000px;
+    justify-content: flex-start;
+    text-align: center;
+  }
+
+  .days-forecast h2 {
+    margin: 20px 0px 20px 0px;
+  }
+
+  .days-container {
+    width: 350px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .day {
+  width: 220px;
+  height: 160px;
+  font-size: 8px;
+  margin-bottom: 10px;
+  font-size: 12px;
+  }
 }
